Fixed the right panel to keep it from shifting around

--- a/src/boardStyle.css
+++ b/src/boardStyle.css
@@ -13,7 +13,7 @@
 .wrapper .interactionPanel {
   grid-column: 3;
   align-self: center;
-  justify-self: center;
+  justify-self: left;
 }
 
 .interactionPanel .wordHolder {
@@ -49,12 +49,14 @@
   font-size: 20px;
   margin-top: 20px;
   margin-bottom: 10px;
+  height: 80px;
 }
 
 .submitButton {
   font-family: Verdana, Geneva, sans-serif;
   font-size: 16px;
   text-align: center;
+  height: 24px;
 }
 
 .gameBoard {
